<resources>
    <string name="app_name">SpartansFitness</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter email</string>
    <string name="error_during_login">Error during login!</string>
    <string name="registration">Registration</string>
    <string name="enter_name">Enter name</string>
    <string name="submit">SUBMIT</string>
    <string name="dont_have_an_account_click_here_to_register">Dont have an account? Click here to register!</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="name">Name</string>
    <string name="logout">LogOut</string>
    <string name="email">Email</string>
    <string name="fetch_user">Fetch User</string>
    <string name="already_have_an_account_click_here_to_login">Already have an account? Click here to login!</string>
</resources>