<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:padding="10dp"
        android:text="@string/name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:padding="10dp"
        android:text="@string/email"
        android:textSize="20sp" />

    <Button
        android:id="@+id/profile_logout"
        android:text="@string/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:visibility="gone"
        android:id="@+id/profile_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:padding="10dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/fetchProfile"
        android:text="@string/fetch_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>