<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bkg_login"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/logo_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="-200dp"
        android:background="@drawable/logo"
        android:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginBottom="10dp"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:hint="@string/enter_email"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:hint="Enter password"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/error"
        android:layout_marginBottom="20dp"
        android:text="@string/error_during_login"
        android:textColor="@color/app_red_100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/login_loading"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/login_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background = "@drawable/btn"
        android:text="@string/submit"/>

    <TextView
        android:id="@+id/registerNow"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:textStyle="bold"
        android:text="@string/dont_have_an_account_click_here_to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>